# aoc2021

./: Cargo.toml
benches/: day15bench.rs
src/: lib.rs  main.rs
src/day1/: main.rs
src/day10/: main.rs
src/day11/: main.rs
src/day12/: main.rs
src/day13/: main.rs
src/day14/: main.rs
src/day15/: grid.rs  main.rs  mod.rs
src/day16/: main.rs
src/day17/: main.rs
src/day18/: main.rs
src/day2/: main.rs
src/day3/: main.rs
src/day4/: main.rs
src/day5/: main.rs
src/day6/: main.rs
src/day7/: main.rs
src/day8/: main.rs
src/day9/: main.rs
src/template/: main.rs
