[package]
name = "aoc2021"
version = "0.1.0"
authors = ["JonathanBrouwer"]
edition = "2021"

[profile.bench]
opt-level = 3
lto = true

[profile.test]
opt-level = 0
lto = false
debug = true

[dependencies]
itertools = "0.10.1"
trie-rs = "0.1.1"
petgraph = "0.6.0"
criterion = "0.3.5"
fixedbitset = "0.4.0"

[[bench]]
name = "day15bench"
harness = false